refactored packaging of foods and docs to support java web start deployment
git-svn-id: http://svn.code.sf.net/p/cronometer/code/trunk/CRONOMETER@191 6e31c603-d216-0410-955d-b262f994ffaf